feat: migrate game table with booking_status
